Date	Added

2011/05/13
	* Rev. 14812 Added settings 'cashshop_show_points' and 'mail_show_status', both disabled by default, as the messages they control are custom (follow up to r11548 and r12264). [Ai4rei]
	- Moved custom cash point update messages to 'msg_athena.conf' (IDs 504~506).
2011/03/15
	* Rev. 14744 Fixed option 'monster_ai' referring to setting 'mob_npc_warp' rather than 'mob_warp' (follow up to r8135). [Ai4rei]
2011/03/06
	* Rev. 14732 Added search store info related settings. [Ai4rei]
2011/02/23
	* Rev. 14724 Made autotrade error message store type-neutral, as it is used for buying stores now as well. [Ai4rei]
2011/02/19
	* Rev. 14713 Added map-server feature settings file 'battle/feature.conf'. [Ai4rei]
	- Added setting 'feature.buying_store' to enable/disable the buying store system.
2011/02/15
	* Rev. 14707 Added map-server battle setting 'gm_check_minlevel'. [Ai4rei]
2011/02/06
	* Rev. 14700 Added char-server setting 'char_del_delay'. [Ai4rei]
2011/01/13
	* Rev. 14667 Removed ladmin settings (ladmin_athena.conf) and login-server settings for ladmin (login_athena.conf) (topic:262934). [Ai4rei]
2010/12/30
	* Rev. 14643 Updated mapcache up to 2010-12-01. Adds Bifrost, Dewata and Malangdo maps. [Ai4rei]
2010/12/12
	* Rev. 14587 Corrected wording of the setting homunculus_autoloot (since r12203). [Ai4rei]
2010/12/10
	* Rev. 14572 Applied update to charhelp.txt provided by EvilPuncker to match current charcommand behavior (bugreport:4632, follow up to r13403). [Ai4rei]
2010/10/10
	* Added cashfood_use_interval config setting. [Paradox924X]
2010/05/25
	* Rev. 14307 Added noteleport flag to nyd_dun02. [L0ne_W0lf]
2009/11/03
	* Rev. 14123 Added mapflags for WoESE guild dungeon. [L0ne_W0lf]
2009/10/18
	* Removed char_rename config setting, now hardcoded [ultramage]
2009/10/15
	* Rev. 14092 Added several 13.x and 12.1 map mapflags, might have missed some. [L0ne_w0lf]
2009/08/18
	* Rev. 14013 Just a conf update, and mapflags! [L0ne_W0lf]